# imSim

./: .flake8  .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  SConstruct  conda_requirements.txt  imSim.py  imsim.py  pyproject.toml  scribble.ipynb  setup.py  travis_test.sh
bin.src/: SConscript  cosmic_ray_extractor.py  flats.py  imsim.py  make_flats.py  phosim_repackager.py  rewrite_segmentation_txt.py  write_amp_image_file.py
config/: .gitignore  1-star.yaml  LsstCam.pickle  README  flat.yaml  flat_with_sed.yaml  imsim-config-instcat-comcam.yaml  imsim-config-instcat.yaml  imsim-config-photon-pooling.yaml  imsim-config-skycat-comcam.yaml  imsim-config-skycat.yaml  imsim-config.yaml  imsim-instcat.yaml  imsim-skycat.yaml  imsim-user.yaml  imsim.yaml
data/: 19-10-30-finals2000A.all  LSSTCam_bias_levels_run_13421.json  LSSTCam_vignetting_data.json  LSSTComCamSim_bias_levels.json  LSSTComCamSim_vignetting_data.json  LsstCamSim_info.yaml  LsstCam_info.yaml  LsstCam_w_2021_40.pickle  LsstComCamSim.yaml  LsstComCamSim_info.yaml  bp_dict_DC2Production.pkl  default_imsim_configs  focalplanelayout_itl.txt  fp_height_map.ecsv  segmentation_itl.txt  sky_model_sed_DC2Production.pkl  small_opsim.db
devel-tools/: eimage_mosaic.py  extract_LSSTCam_parameters.py  refit_tree_ring_data.py
doc/: Makefile  conf.py  config.rst  config.txt  data-formats.rst  diffraction.md  features.rst  index.rst  install.rst  lsst-camera.rst  lsst-optical.rst  module-use.rst  usage.rst
etc/: .condarc  docker_conda_requirements.txt  docker_pip_requirements.txt  (+1 more)
(+280 files in other folders)
