[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
# We're working towards getting all the tests working, but so far these are
# the ones that dont work with the pip installation:
addopts = """
--ignore=tests/test_skyModel.py
--ignore=tests/test_get_stack_products.py
--ignore=tests/test_imageSimulator.py
--ignore=tests/test_psf.py
"""
